--- a/administrator/modules/mod_rokadminaudit/language/ru-RU/ru-RU.mod_rokadminaudit.ini
+++ b/administrator/modules/mod_rokadminaudit/language/ru-RU/ru-RU.mod_rokadminaudit.ini
@@ -2,7 +2,7 @@ MC_RAA_LOW="Низкий"
 MC_RAA_MEDIUM="Средний"
 MC_RAA_HIGH="Высокий"
 MC_RAA_DETAILS="подбробности"
-MC_RAA_LOAD_MORE="загружать дальше"
+MC_RAA_LOAD_MORE="Еще..."
 MC_RAA_ROKADMINAUDIT_DESC="Этот модуль обеспечивает данные административной проверки, собранные плагином RokTracking"
 MC_RAA_ENTRIES_LIMIT="Лимит записей"
 MC_RAA_ENTRIES_LIMIT_DESC="Число показываемых модулем записей"
