--- a/administrator/language/ru-RU/ru-RU.com_media.ini
+++ b/administrator/language/ru-RU/ru-RU.com_media.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-COM_MEDIA="Медиа-менеджер"
+COM_MEDIA="Файлы"
 COM_MEDIA_ALIGN="Выравнивание"
 COM_MEDIA_ALIGN_DESC="Если выбрать <strong>Не определено</strong>, выравнивание будет определяться классом '.Img_caption.none'. Обычно, выравнивание в этом классе задано по центру страницы."
 COM_MEDIA_BROWSE_FILES="Файлы для просмотра"
