--- a/administrator/language/ru-RU/ru-RU.com_content.ini
+++ b/administrator/language/ru-RU/ru-RU.com_content.ini
@@ -9,7 +9,7 @@ COM_CONTENT_ACCESS_DELETE_DESC="Новое значение для права н
 COM_CONTENT_ACCESS_EDIT_DESC="Новое значение для права на действие <strong>Изменить</strong> для данного материала, а так же суммарное право, определённое на основе прав в вышестоящей категории и прав группы."
 COM_CONTENT_ACCESS_EDITSTATE_DESC="Новое значение для права на действие <strong>Изменить состояние</strong> для данного материала, а так же суммарное право, определённое на основе прав в вышестоящей категории и прав группы."
 COM_CONTENT_ARTICLE_DETAILS="Параметры материала"
-COM_CONTENT_ARTICLES_TITLE="Менеджер материалов: Материалы"
+COM_CONTENT_ARTICLES_TITLE="Материалы"
 COM_CONTENT_ATTRIBS_ARTICLE_SETTINGS_LABEL="Параметры отображения материала"
 COM_CONTENT_ATTRIBS_FIELDSET_LABEL="Параметры отображения материала"
 COM_CONTENT_BATCH_MENU_LABEL="Выберите категорию для перемещения/копирования"
@@ -38,7 +38,7 @@ COM_CONTENT_FEATURED="Избранный материал"
 COM_CONTENT_FEATURED_CATEGORIES_DESC="Необязательный список категорий. Если включено, то будут показаны только 'избранные' материалы данной категории. Для выбора можно воспользоваться комбинацией клавиш Ctrl+Click."
 COM_CONTENT_FEATURED_CATEGORIES_LABEL="Выбор категорий"
 COM_CONTENT_FEATURED_ORDER="Порядок избранных материалов"
-COM_CONTENT_FEATURED_TITLE="Менеджер материалов: Избранные материалы"
+COM_CONTENT_FEATURED_TITLE="Материалы: Избранные"
 COM_CONTENT_FIELD_ARTICLETEXT_DESC="Введите содержание материала в текстовой области"
 COM_CONTENT_FIELD_ARTICLETEXT_LABEL="Текст материала"
 COM_CONTENT_FIELD_CREATED_BY_ALIAS_DESC="Здесь можно ввести псевдоним, который будет отображаться вместо имени пользователя, создавшего материал."
@@ -120,9 +120,9 @@ COM_CONTENT_NO_ARTICLES_DESC="Если выбрано <strong>Показать</
 COM_CONTENT_NO_ARTICLES_LABEL="Сообщение об отсутствии материалов"
 COM_CONTENT_NUMBER_CATEGORY_ITEMS_DESC="Если выбрано <strong>Показать</strong>, будет показано количество материалов в категории."
 COM_CONTENT_NUMBER_CATEGORY_ITEMS_LABEL="Кол-во материалов в категории"
-COM_CONTENT_PAGE_ADD_ARTICLE="Менеджер материалов: Создать материал"
-COM_CONTENT_PAGE_EDIT_ARTICLE="Менеджер материалов: Изменить материал"
-COM_CONTENT_PAGE_VIEW_ARTICLE="Менеджер материалов: Просмотр материала"
+COM_CONTENT_PAGE_ADD_ARTICLE="Материалы: Создать"
+COM_CONTENT_PAGE_EDIT_ARTICLE="Материалы: Изменить"
+COM_CONTENT_PAGE_VIEW_ARTICLE="Материалы: Просмотр материала"
 COM_CONTENT_PAGEBREAK_DOC_TITLE="Разрыв страницы"
 COM_CONTENT_PAGEBREAK_INSERT_BUTTON="Вставить разрыв страницы"
 COM_CONTENT_PAGEBREAK_TITLE="Заголовок страницы:"
