--- a/administrator/language/ru-RU/ru-RU.com_menus.ini
+++ b/administrator/language/ru-RU/ru-RU.com_menus.ini
@@ -170,12 +170,12 @@ COM_MENUS_TYPE_SEPARATOR="Разделитель"
 COM_MENUS_TYPE_SEPARATOR_DESC="Текстовый разделитель."
 COM_MENUS_TYPE_UNEXISTING="Компонент '%s' не существует"
 COM_MENUS_TYPE_UNKNOWN="Неизвестный"
-COM_MENUS_VIEW_EDIT_ITEM_TITLE="Менеджер меню: Редактирование пункта меню"
+COM_MENUS_VIEW_EDIT_ITEM_TITLE="Пункт меню: Редактирование"
 COM_MENUS_VIEW_EDIT_MENU_TITLE="Менеджер меню: Изменить меню"
-COM_MENUS_VIEW_ITEMS_TITLE="Менеджер меню: Пункты меню"
-COM_MENUS_VIEW_MENUS_TITLE="Менеджер меню: Все меню"
-COM_MENUS_VIEW_NEW_ITEM_TITLE="Менеджер меню: Создание пункта меню"
-COM_MENUS_VIEW_NEW_MENU_TITLE="Менеджер меню: Создать меню"
+COM_MENUS_VIEW_ITEMS_TITLE="Меню: Пункты"
+COM_MENUS_VIEW_MENUS_TITLE="Меню"
+COM_MENUS_VIEW_NEW_ITEM_TITLE="Пункт меню: Создание"
+COM_MENUS_VIEW_NEW_MENU_TITLE="Меню: Создать"
 COM_MENUS_XML_DESCRIPTION="Компонент для создания меню"
 JLIB_DATABASE_ERROR_ANCESTOR_NODES_LOWER_STATE="Нельзя изменять состояние публикации, если состояние родительского пункта меню ниже, чем у текущего."
 JLIB_RULES_SETTING_NOTES="1. Если изменить значение, оно будет применено для данного компонента. Обратите внимание:<br /><em>Унаследовано</em> - означает, что будет применено значение данного права, указанное в общих настройках и в вышестоящей группе.<br /><em>Запрещено</em> - означает, что независимо от значения в общих настройках и в вышестоящей группе, пользователи данной группы не смогут выполнить указанное действие в этом компоненте.<br /><em>Разрешено</em> - означает, что пользователи данной группы смогут выполнить указанное действие в этом компоненте (но, в случае противоречия со значением в общих настройках сайта или в вышестоящей группе право на действие предоставлено не будет. Противоречие будет помечено в поле суммарных значений, как <em>Не разрешено (со значком блокировки)</em>).<br />2. Если вы зададите новое значение, для обновления суммарных значений нажмите кнопку <em>Сохранить</em>."
