--- a/administrator/language/ru-RU/ru-RU.com_content.sys.ini
+++ b/administrator/language/ru-RU/ru-RU.com_content.sys.ini
@@ -17,8 +17,8 @@ COM_CONTENT_CATEGORIES="Категории"
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_DESC="Отображает список всех категорий материалов."
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_OPTION="По умолчанию"
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_TITLE="Список всех категорий"
-COM_CONTENT_CATEGORY_ADD_TITLE="Менеджер категорий: Создать категорию материалов"
-COM_CONTENT_CATEGORY_EDIT_TITLE="Менеджер категорий: Изменить категорию материалов"
+COM_CONTENT_CATEGORY_ADD_TITLE="Категории: Создать"
+COM_CONTENT_CATEGORY_EDIT_TITLE="Категории: Изменить"
 COM_CONTENT_CATEGORY_VIEW_BLOG_DESC="Отображает вводные части материалов в одном или&#160;нескольких столбцах."
 COM_CONTENT_CATEGORY_VIEW_BLOG_OPTION="Блог"
 COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE="Блог категории"
